--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,19 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:srcCompat="@drawable/tesoura" />
 
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editTextAndroid"
+        android:layout_width="112dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="138dp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:background="@null"
+        />
+
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
